cmake_minimum_required(VERSION 4.0)
project(ZZ2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZZ2
        Tp1/Chaine.cpp
        Tp1/Erreur.c
        Tp1/HelloWord.cpp
        Tp1/Tableau.cpp
        Tp1/Reference.cpp
        Tp1/Pointeur.cpp
        Tp1/Objet.cpp
        Tp2/Point.hpp
        Tp2/Point.cpp
        Tp2/main.cpp)
